kubernetes/overlays/stage/arches-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arches-api
spec:
  selector:
    matchLabels:
      component: arches-api
  replicas: 3
  template:
    spec:
      $patch: replace
      containers:
        - name: arches-api
          image: us-west2-docker.pkg.dev/filechat-io/images/arches-api
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
          volumeMounts:
            - mountPath: /usr/src/app/server-ca.pem
              name: arches-redis-ca-cert
              subPath: redis-ca.pem
          readinessProbe: # define readiness probe
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe: # define liveness probe
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 20
        - name: cloud-sql-proxy
          # It is recommended to use the latest version of the Cloud SQL Auth Proxy
          # Make sure to update on a regular schedule!
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.1.0
          args:
            # If connecting from a VPC-native GKE cluster, you can use the
            # following flag to have the proxy connect over private IP
            # - "--private-ip"

            # Enable structured logging with LogEntry format:
            - "--structured-logs"

            # Replace DB_PORT with the port the proxy should listen on
            - "--port=5432"
            - "filechat-io:us-central1:migrations-test"

          securityContext:
            # The default Cloud SQL Auth Proxy image runs as the
            # "nonroot" user and group (uid: 65532) by default.
            runAsNonRoot: true
          # You should use resource requests/limits as a best practice to prevent
          # pods from consuming too many resources and affecting the execution of
          # other pods. You should adjust the following values based on what your
          # application needs. For details, see
          # https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: arches-redis-ca-cert
          secret:
            secretName: arches-redis-ca-cert
      serviceAccountName: cloud-sql-sa
      hostname: arches-api
      restartPolicy: Always
