kubernetes/overlays/stage/arches-api-filechat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-api-filechat-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: arches-api-filechat-static-ip
    networking.gke.io/managed-certificates: arches-api-filechat-certificate
    networking.gke.io/v1beta1.FrontendConfig: arches-frontend-config
spec:
  rules:
    - host: api.filechat.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-api
                port:
                  number: 443
